--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@ font-family: 'Unbounded', sans-serif;
 	left: 50%;
 	transform: translateX(-50%);
 	bottom: 20px;
+	z-index: 3;
 }
 #i-lid{
 	width: 180px;
